--- a/settings.json.template
+++ b/settings.json.template
@@ -121,6 +121,7 @@
   // GETINFO : retreive from getinfo api call (PoS)
   // HEAVY: retreive from heavys getsupply api call
   // BALANCES : total of all address balances
+  // TXOUTSET : retreive from gettxoutsetinfo api call
   "supply": "BALANCES",
 
   // how to acquire network hashrate
