--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.6.1",
   "private": true,
   "scripts": {
-    "start": "node --stack-size=10000 ./bin/cluster",
+    "start": "nodejs --stack-size=10000 ./bin/cluster",
     "stop": "kill -2 $(cat tmp/cluster.pid)",
-    "test": "node ./node_modules/jasmine/bin/jasmine.js"
+    "test": "nodejs ./node_modules/jasmine/bin/jasmine.js"
   },
   "dependencies": {
     "express": "~4.2.0",
